<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spiaa.activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/agente_de_saude_titulo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/message_login_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/usuario_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/message_login_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/senha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/botao_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:layout_gravity="bottom"
            android:theme="@style/AppTheme.Button.Primary" />
    </LinearLayout>


</RelativeLayout>
