<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/contagem_denuncia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/titulo_endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/endereco" />

    <TextView
        android:id="@+id/endereco_denuncia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titulo_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero" />

        <TextView
            android:id="@+id/numero_denuncia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titulo_bairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bairro" />

        <TextView
            android:id="@+id/bairro_denuncia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/status_denuncia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textStyle="bold" />

    <View
        android:id="@+id/transparent"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />


</LinearLayout>